Add deployment guide for AWS Lambda + API Gateway and secret resolution utility
- Add `DEPLOYMENT.md` detailing setup and architecture for Lambda + API Gateway.
- Introduce `secrets_manager.py` for seamless SSM Parameter Store integration.
- Update `.env.example` for secret management in local and production environments.
- Refactor CI/CD workflows to support Lambda deployments.
- Revise Terraform infrastructure to replace App Runner with Lambda + API Gateway.

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,23 @@ MODEL_PROVIDER=openai
 # Pour Mistral: 'mistral-small-latest', 'open-mixtral-8x22b', etc.
 MODEL_NAME=gpt-4o
 
+# =============================================================================
+# API Keys - Secret Resolution
+# =============================================================================
+# The application automatically handles secrets in both environments:
+#
+# LOCAL DEVELOPMENT:
+#   - Provide raw API key values directly
+#   - Example: OPENAI_API_KEY=sk-proj-xxxxx
+#
+# PRODUCTION (AWS Lambda):
+#   - Environment variables are set to SSM parameter names (start with '/')
+#   - Example: OPENAI_API_KEY=/patient-overview/openai-api-key
+#   - The secrets_manager.py module automatically detects and retrieves from SSM
+#
+# No code changes needed - the same codebase works in both environments!
+# =============================================================================
+
 # Clé API OpenAI (obligatoire si MODEL_PROVIDER=openai)
 OPENAI_API_KEY=your_openai_api_key_here
 
