--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -12,7 +12,7 @@ on:
 env:
   AWS_REGION: eu-west-3
   ECR_REPOSITORY: patient-insight
-  APP_RUNNER_SERVICE_NAME: patient-insight
+  LAMBDA_FUNCTION_NAME: patient-insight
 
 jobs:
   build-and-test:
@@ -77,13 +77,13 @@ jobs:
           echo "- **Tests**: Passed ✅" >> $GITHUB_STEP_SUMMARY
 
   deploy:
-    name: Deploy to AWS App Runner
+    name: Deploy to AWS Lambda
     needs: build-and-test
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main'
     environment:
       name: production
-      url: ${{ steps.deploy.outputs.service-url }}
+      url: ${{ steps.deploy.outputs.api-url }}
     permissions:
       id-token: write
       contents: read
@@ -98,48 +98,50 @@ jobs:
           role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME }}
           aws-region: ${{ env.AWS_REGION }}
 
-      - name: Update App Runner service
+      - name: Update Lambda function
         id: deploy
         env:
           IMAGE_URI: ${{ needs.build-and-test.outputs.image-uri }}
         run: |
-          # Get the current service ARN
-          SERVICE_ARN=$(aws apprunner list-services \
-            --region $AWS_REGION \
-            --query "ServiceSummaryList[?ServiceName=='$APP_RUNNER_SERVICE_NAME'].ServiceArn | [0]" \
-            --output text)
-
-          if [ "$SERVICE_ARN" = "None" ] || [ -z "$SERVICE_ARN" ]; then
-            echo "Error: App Runner service not found. Please deploy infrastructure with Terraform first."
+          # Check if Lambda function exists
+          if ! aws lambda get-function --function-name $LAMBDA_FUNCTION_NAME --region $AWS_REGION &>/dev/null; then
+            echo "Error: Lambda function '$LAMBDA_FUNCTION_NAME' not found. Please deploy infrastructure with Terraform first."
             exit 1
           fi
 
-          echo "Updating App Runner service: $SERVICE_ARN"
+          echo "Updating Lambda function: $LAMBDA_FUNCTION_NAME"
 
-          # Trigger a new deployment with the new image
-          aws apprunner start-deployment \
-            --service-arn $SERVICE_ARN \
+          # Update Lambda function code with new image
+          aws lambda update-function-code \
+            --function-name $LAMBDA_FUNCTION_NAME \
+            --image-uri $IMAGE_URI \
             --region $AWS_REGION
 
-          # Wait for deployment to complete
-          echo "Waiting for deployment to complete..."
-          aws apprunner wait service-running \
-            --service-arn $SERVICE_ARN \
+          # Wait for the update to complete
+          echo "Waiting for Lambda update to complete..."
+          aws lambda wait function-updated-v2 \
+            --function-name $LAMBDA_FUNCTION_NAME \
             --region $AWS_REGION
 
-          # Get the service URL
-          SERVICE_URL=$(aws apprunner describe-service \
-            --service-arn $SERVICE_ARN \
+          # Get the API Gateway URL
+          API_ID=$(aws apigatewayv2 get-apis \
             --region $AWS_REGION \
-            --query 'Service.ServiceUrl' \
+            --query "Items[?Name=='${LAMBDA_FUNCTION_NAME}-api'].ApiId | [0]" \
             --output text)
 
-          echo "service-url=https://$SERVICE_URL" >> $GITHUB_OUTPUT
+          if [ "$API_ID" != "None" ] && [ -n "$API_ID" ]; then
+            API_URL="https://${API_ID}.execute-api.${AWS_REGION}.amazonaws.com"
+          else
+            API_URL="not available"
+          fi
+
+          echo "api-url=${API_URL}" >> $GITHUB_OUTPUT
           echo "### Deployment Complete 🚀" >> $GITHUB_STEP_SUMMARY
-          echo "- **Service URL**: https://$SERVICE_URL" >> $GITHUB_STEP_SUMMARY
+          echo "- **API URL**: ${API_URL}" >> $GITHUB_STEP_SUMMARY
+          echo "- **Lambda Function**: $LAMBDA_FUNCTION_NAME" >> $GITHUB_STEP_SUMMARY
           echo "- **Image**: $IMAGE_URI" >> $GITHUB_STEP_SUMMARY
 
       - name: Deployment status
         run: |
           echo "Deployment completed successfully!"
-          echo "Service URL: ${{ steps.deploy.outputs.service-url }}"
+          echo "API URL: ${{ steps.deploy.outputs.api-url }}"
