--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -89,6 +89,25 @@ jobs:
         id: validate
         run: terraform validate -no-color
 
+      - name: Run Checkov Security Scan
+        id: checkov
+        uses: bridgecrewio/checkov-action@master
+        with:
+          directory: terraform/
+          framework: terraform
+          output_format: cli,sarif
+          output_file_path: console,checkov-results.sarif
+          soft_fail: false
+          skip_check: CKV_AWS_117,CKV_AWS_173
+        continue-on-error: false
+
+      - name: Upload Checkov SARIF Results
+        if: always()
+        uses: github/codeql-action/upload-sarif@v3
+        with:
+          sarif_file: checkov-results.sarif
+          category: checkov-terraform
+
       - name: Terraform Plan
         id: plan
         env:
@@ -114,6 +133,7 @@ jobs:
           echo "### Validation Results" >> $GITHUB_STEP_SUMMARY
           echo "- **Format Check**: ${{ steps.fmt.outcome == 'success' && '✅ Passed' || '⚠️ Failed' }}" >> $GITHUB_STEP_SUMMARY
           echo "- **Validation**: ${{ steps.validate.outcome == 'success' && '✅ Passed' || '❌ Failed' }}" >> $GITHUB_STEP_SUMMARY
+          echo "- **Security Scan (Checkov)**: ${{ steps.checkov.outcome == 'success' && '✅ Passed' || '❌ Failed' }}" >> $GITHUB_STEP_SUMMARY
           echo "- **Plan**: ${{ steps.plan.outcome == 'success' && '✅ Completed' || '❌ Failed' }}" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "### Configuration" >> $GITHUB_STEP_SUMMARY
@@ -129,6 +149,7 @@ jobs:
 
             **Format Check**: \`${{ steps.fmt.outcome }}\`
             **Validation**: \`${{ steps.validate.outcome }}\`
+            **Security Scan (Checkov)**: \`${{ steps.checkov.outcome }}\` ${{ steps.checkov.outcome == 'success' && '✅' || '❌' }}
             **Plan**: \`${{ steps.plan.outcome }}\`
 
             <details><summary>Show Plan Details</summary>
@@ -209,11 +230,13 @@ jobs:
       - name: Get Outputs
         id: output
         run: |
-          SERVICE_URL=$(terraform output -raw app_runner_service_url 2>/dev/null || echo "not available")
+          API_URL=$(terraform output -raw api_gateway_url 2>/dev/null || echo "not available")
+          LAMBDA_NAME=$(terraform output -raw lambda_function_name 2>/dev/null || echo "not available")
           OPENAI_PARAM=$(terraform output -raw ssm_openai_api_key_parameter 2>/dev/null || echo "not available")
           MISTRAL_PARAM=$(terraform output -raw ssm_mistral_api_key_parameter 2>/dev/null || echo "not available")
 
-          echo "service-url=${SERVICE_URL}" >> $GITHUB_OUTPUT
+          echo "api-url=${API_URL}" >> $GITHUB_OUTPUT
+          echo "lambda-name=${LAMBDA_NAME}" >> $GITHUB_OUTPUT
           echo "openai-param=${OPENAI_PARAM}" >> $GITHUB_OUTPUT
           echo "mistral-param=${MISTRAL_PARAM}" >> $GITHUB_OUTPUT
 
@@ -227,8 +250,9 @@ jobs:
           echo "- **Region**: ${{ env.AWS_REGION }}" >> $GITHUB_STEP_SUMMARY
           echo "- **ECR Image**: ${{ steps.ecr-uri.outputs.ecr-uri }}:latest" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
-          echo "### Service URL" >> $GITHUB_STEP_SUMMARY
-          echo "🚀 **App Runner URL**: https://${{ steps.output.outputs.service-url }}" >> $GITHUB_STEP_SUMMARY
+          echo "### API Gateway URL" >> $GITHUB_STEP_SUMMARY
+          echo "🚀 **API URL**: ${{ steps.output.outputs.api-url }}" >> $GITHUB_STEP_SUMMARY
+          echo "- **Lambda Function**: ${{ steps.output.outputs.lambda-name }}" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "### ⚠️ Next Steps: Configure API Keys" >> $GITHUB_STEP_SUMMARY
           echo "API keys are stored in AWS Systems Manager Parameter Store. Set them manually:" >> $GITHUB_STEP_SUMMARY
@@ -244,15 +268,16 @@ jobs:
           echo "  --value \"your-mistral-key-here\" --type SecureString --overwrite \\" >> $GITHUB_STEP_SUMMARY
           echo "  --region ${{ env.AWS_REGION }}" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
-          echo "# Restart App Runner to pick up the new values" >> $GITHUB_STEP_SUMMARY
-          echo "aws apprunner start-deployment --service-arn <SERVICE_ARN> --region ${{ env.AWS_REGION }}" >> $GITHUB_STEP_SUMMARY
+          echo "# Re-apply Terraform to inject the new API keys into Lambda" >> $GITHUB_STEP_SUMMARY
+          echo "terraform apply -var=\"image_identifier=<ECR_URI>:latest\"" >> $GITHUB_STEP_SUMMARY
           echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
 
       - name: Apply Status
         if: steps.apply.outcome == 'success'
         run: |
           echo "✅ Infrastructure deployment completed successfully!"
-          echo "Service URL: https://${{ steps.output.outputs.service-url }}"
+          echo "API Gateway URL: ${{ steps.output.outputs.api-url }}"
+          echo "Lambda Function: ${{ steps.output.outputs.lambda-name }}"
           echo ""
           echo "⚠️ IMPORTANT: Set your API keys in AWS Systems Manager Parameter Store"
           echo "  - OpenAI: ${{ steps.output.outputs.openai-param }}"
