--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -15,8 +15,38 @@ env:
   LAMBDA_FUNCTION_NAME: patient-insight
 
 jobs:
-  build-and-test:
-    name: Build and Test
+  test:
+    name: Run Tests
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.12'
+
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
+
+      - name: Install dependencies
+        run: |
+          uv sync --all-extras
+
+      - name: Run pytest
+        run: |
+          uv run pytest test_mock.py -v
+
+      - name: Test summary
+        if: always()
+        run: |
+          echo "### Test Results" >> $GITHUB_STEP_SUMMARY
+          echo "- **Status**: ${{ job.status == 'success' && '✅ Passed' || '❌ Failed' }}" >> $GITHUB_STEP_SUMMARY
+
+  build:
+    name: Build Docker Image
+    needs: test
     runs-on: ubuntu-latest
     permissions:
       id-token: write
@@ -55,12 +85,6 @@ jobs:
             .
           echo "image=$IMAGE_URI" >> $GITHUB_OUTPUT
 
-      - name: Run tests
-        env:
-          IMAGE_URI: ${{ steps.build-image.outputs.image }}
-        run: |
-          docker run --rm $IMAGE_URI uv run python test_mock.py
-
       - name: Push image to Amazon ECR
         if: github.ref == 'refs/heads/main'
         env:
@@ -74,11 +98,10 @@ jobs:
         run: |
           echo "### Build Summary" >> $GITHUB_STEP_SUMMARY
           echo "- **Image URI**: ${{ steps.build-image.outputs.image }}" >> $GITHUB_STEP_SUMMARY
-          echo "- **Tests**: Passed ✅" >> $GITHUB_STEP_SUMMARY
 
   deploy:
     name: Deploy to AWS Lambda
-    needs: build-and-test
+    needs: build
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main'
     environment:
@@ -101,7 +124,7 @@ jobs:
       - name: Update Lambda function
         id: deploy
         env:
-          IMAGE_URI: ${{ needs.build-and-test.outputs.image-uri }}
+          IMAGE_URI: ${{ needs.build.outputs.image-uri }}
         run: |
           # Check if Lambda function exists
           if ! aws lambda get-function --function-name $LAMBDA_FUNCTION_NAME --region $AWS_REGION &>/dev/null; then
