--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,3 +15,9 @@ dependencies = [
     "pandas>=2.3.3",
     "boto3>=1.34.0",
 ]
+
+[project.optional-dependencies]
+dev = [
+    "pytest>=8.0.0",
+    "pytest-mock>=3.12.0",
+]
