Format and align Terraform code; add `lambda_reserved_concurrency` variable; re-enable Terraform workflow triggers

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,18 +1,18 @@
 name: Terraform Infrastructure
 
 on:
-#  push:
-#    branches:
-#      - main
-#    paths:
-#      - 'terraform/**'
-#      - '.github/workflows/terraform.yml'
-#  pull_request:
-#    branches:
-#      - main
-#    paths:
-#      - 'terraform/**'
-#      - '.github/workflows/terraform.yml'
+  push:
+    branches:
+      - main
+    paths:
+      - 'terraform/**'
+      - '.github/workflows/terraform.yml'
+  pull_request:
+    branches:
+      - main
+    paths:
+      - 'terraform/**'
+      - '.github/workflows/terraform.yml'
   workflow_dispatch:
     inputs:
       action:
