--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -36,6 +36,7 @@ jobs:
       id-token: write
       contents: read
       pull-requests: write
+      security-events: write
     defaults:
       run:
         working-directory: ./terraform
